# ProtoTMS

./: .envrc  .gitignore  README.org  __init__.py  config.yaml  flake.nix  mypy.ini  nixReqs.txt  pyproject.toml  requirements.txt  shell.nix
assets/: ubicaciones.html
proposal/: Biblio.bib  Ficha descriptiva Trabajo de Grado.docx  Pymes.bib  _region_.tex  biblio.bib  proposal.tex  revisión.org
src/: __init__.py  distanceAPI.py  generate.py  generate_pulp.py  locations.py  locations.test.py  main.py  matrix.py  test_distanceAPI.py  test_locations.py
