[tool.poetry]
name = "ortoolstms"
version = "0.1.0"
description = "Optimizador de rutas para transporte"
authors = ["Luis Chavarriaga <luischa123@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"
absl-py = "^0.14.0"
amply = "^0.1.4"
beautifulsoup4 = "^4.10.0"
certifi = "^2021.5.30"
charset-normalizer = "^2.0.6"
Cycler = "^0.10.0"
data-science-types = "^0.2.23"
docutils = "^0.17.1"
geojson = "^2.5.0"
gmaps = "^0.9.0"
googlemaps = "^4.5.3"
ipywidgets = "^7.6.5"
jupyterlab-widgets = "^1.0.2"
kiwisolver = "^1.3.2"
matplotlib = "^3.4.3"
mock = "^4.0.3"
olefile = "^0.46"
ortools = "^9.0.9048"
ortools-stubs = "^8.0.0"
pbr = "^5.6.0"
Pillow = "^8.3.2"
pip = "^21.2.4"
pony = "^0.7.14"
protobuf = "^3.18.0"
PuLP = "^2.5.0"
pyparsing = "^2.4.7"
python-dateutil = "^2.8.2"
pytz = "^2021.1"
PyYAML = "^5.4.1"
requests = "^2.26.0"
setuptools = "^58.1.0"
six = "^1.16.0"
soupsieve = "^2.2.1"
tornado = "^6.1"
types-beautifulsoup4 = "^4.10.0"
types-PyYAML = "^5.4.10"
types-requests = "^2.25.8"
urllib3 = "^1.26.7"
widgetsnbextension = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
